XXXX.XX.XX Version XX.X.X
* Added overloads which only accept the required parameters.
* TransferManager options now throw if an IProgressReceiver is passed as it is not currently supported. Support will be added in a later release.
* Added CopyFromURL, which will do a synchronous server-side copy, meaning the service will not return an HTTP response until it has completed the copy.

2018.09.11 Version 10.1.0
* Interfaces for helper types updated to be more consistent throughout the library. All types, with the exception of the options for pipeline factories, use a fluent pattern.
* Removed RetryReader type as it's functionality was moved to be built into the DownloadResponse. RetryReaderOptions are now named ReliableDownloadOptions.
* Restructured the access conditions to be more logically adhere to their respective functions.
* Added support for context parameter on each api to allow communication with the pipeline from the application level

2018.08.22 Version 10.0.4-rc
* Support for the 2017-11-09 REST version. Please see our REST api documentation and blogs for information about the related added features.
* Support for 2018-03-28 REST version. Please see our REST api documentation and blogs for information about the related added features.
* Support for the getAccountInfo api on ServiceURL, ContainerURL, and BlobURL.
* Added support for setting service properties related to static websites.
* Changed BlobURL.startCopy sourceAccessConditions parameter to be HTTPAccessConditions as lease is not actually supported.
* Added methods to TransferManager for conveniently downloading a blob to a file.
* UploadFromFile now takes an AsynchronousFileChannel.
* UploadByteBuffersToBlockBlob, UploadByteBufferToBlockBlob, and DownloadToBuffer have been removed.
* IPRange fields are now strings.
* Fixed retry policy.
* Fixed logging policy.

2018.08.08 Version 10.0.3-Preview
* Resolved dependency issues

2018.08.07 Version 10.0.2-Preview